	changed as well (must activate in the prefs menu). Patch provided
	by Ramesh Dharan. Thanks!

	IMPROVEMENT: added auto-dection of Japanese encoding (thanks
	to Hiroshi Kawashima).

	IMPROVEMENT: option to sort case-sensitively. Case-insensitive
	utf8 sort should work fine, case-sensitive may not work entirely
	as expected with some charsets.

	BUGFIX: can now choose zero sort tabs in the prefs dialogue
	(instead of the minimum one) -- why didn't anyone tell me?

	BUGFIX: fixed memory holes in pm_data_compare_func(),
	st_data_compare_func(), sm_data_compare_func(),
	get_ipod_used_space(), get_ipod_free_space(),
	charset_to_description(), add_playlist_by_filename(),
	sm_cell_edited().

gtkpod V0.51
	NEW FEATURE: Synchronize directories (removed songs can be deleted
	automatically).

	NEW FEATURE: gtkpod remembers charset used when initially
	importing a song and uses this when "updating" the song
	information from file or writing tags to file (needs extended
	information enabled).

	NEW FEATURE: display free space on iPod.

	NEW FEATURE: menu item "Arrange Sort Tabs" to make all visible
	sort tabs the same size

        IMPROVEMENT: gtkpod should now compile "out of the box" under
	FreeBSD and NetBSD (some adaptations were necessary before).

        IMPROVEMENT: added all supported charsets provided by "iconv
	-l" to the list of charsets to choose from. Code assumes that
	"iconv -l" returns a list with the name of one charset in each
	line, each valid line being terminated by "//".

	IMPROVEMENT: new song column types: file size, play time,
	avg. bitrate

	BUGFIX: changed playlength code to that used by mp3info. It's much
	slower but seems to be more reliable.

	BUGFIX: fixed "dead" context menu "Alphabetize"

gtkpod V0.50
	NEW FEATURE: context sensitive popup menues (right mouse button
	click in playlist view, sort tabs or song view.

	NEW FEATURE: play song with xmms (two user definable commands).

	NEW FEATURE: option to mount the iPod directory on startup and